# auditai

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: action-e2e.yml  ci.yml  publish-pypi.yml
action/: run.sh
cloud/: docker-compose.yml
cloud/api/: Dockerfile  README.md  pyproject.toml
cloud/api/app/: __init__.py  _pdf_cert.py  auth.py  compliance_pdf.py  db.py  main.py  models.py  schemas.py  settings.py
cloud/api/app/fonts/: README.md
cloud/api/app/routes/: health.py  projects.py  runs.py
cloud/api/tests/: test_api.py
cloud/dashboard/: .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
cloud/dashboard/src/app/: globals.css  layout.tsx
cloud/dashboard/src/app/runs/[id]/: page.tsx
cloud/dashboard/src/components/: Dashboard.tsx  Header.tsx  LoginForm.tsx  MetricCard.tsx  RunsTable.tsx  Sparkline.tsx
cloud/dashboard/src/lib/: api.ts  auth.ts  types.ts
docs/: GTM_v0.1.md  PYPI.md  RELEASE_v0.1.md
docs/gtm/: GROWTH_HACK.md  HANDOFF_CODEX.md  STATUS.md  TARGETS.md
docs/gtm/drafts/: 03-qtuanph-chatbot-rag-retrieval-suggestions.md  04-qtuanph-thank-you-badge-ask.md
docs/gtm/drafts/01-towardsai-ai-tutor-app/: PR_BODY.md  README.md  auditai.yml  auditai_chat_adapter.py  dataset.json  workflow-auditai.yml
docs/gtm/drafts/02-hitrong-rag-student-chatbot/: COPY_MAP.txt  PR_BODY.md  README.md  auditai.yml  auditai_http_adapter.py  dataset.json  seed_tma_context.txt  workflow-auditai.yml
docs/gtm/templates/: PR_BODY_VI.md  README_BADGE.md
examples/github-action/: auditai-pr.yml  gitlab-ci.yml
examples/rag_demo/: auditai.yml  dataset.json  mock_server.py
examples/xai_judge/: auditai.yml
scripts/: publish_pypi.sh
scripts/gtm/: fill_pr_body.py  guerrilla_prep.py  open_guerrilla_pr.py  run_growth_hack.sh  scan_github.py
src/auditai/: __init__.py  __main__.py  cli.py  cloud.py  compare.py  compliance_pdf.py  config.py  dataset.py  errors.py  models.py  runner.py
src/auditai/evaluators/: __init__.py  base.py  faithfulness.py  injection.py  registry.py  relevancy.py
src/auditai/judge/: __init__.py  base.py  factory.py  mock_judge.py  openai_judge.py
src/auditai/reporters/: __init__.py  json_report.py  markdown.py  terminal.py
src/auditai/util/: __init__.py  env.py  jsonpath.py
tests/: test_action_runner.py  test_cli.py  test_cloud.py  test_compliance_pdf.py  test_config.py  test_evaluators.py  test_guerrilla_prep.py  test_judge_xai.py  test_open_guerrilla_pr.py  test_runner.py
tests/fixtures/: dataset.json  sample.yml
