[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI rejects bare "auditai" as too similar to existing "audit-ai".
# Import path and console script remain `auditai`.
name = "auditai-cli"
version = "0.1.1"
description = "Developer-first LLM/RAG safety audits for CI/CD (AuditAI CLI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "iZenDeveloper" }]
keywords = [
  "llm",
  "rag",
  "ci",
  "evaluation",
  "deepeval",
  "safety",
  "faithfulness",
  "prompt-injection",
  "xai",
  "grok",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "rich>=13.7",
  "openai>=1.40",
]

[project.optional-dependencies]
deepeval = ["deepeval>=1.0"]
pdf = ["fpdf2>=2.7"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "fpdf2>=2.7",
]

[project.scripts]
auditai = "auditai.cli:app"

[project.urls]
Homepage = "https://github.com/iZenDeveloper/auditai"
Documentation = "https://github.com/iZenDeveloper/auditai#readme"
Repository = "https://github.com/iZenDeveloper/auditai"
Issues = "https://github.com/iZenDeveloper/auditai/issues"
Changelog = "https://github.com/iZenDeveloper/auditai/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/auditai"]

[tool.hatch.build.targets.wheel.sources]
"src/auditai" = "auditai"

[tool.hatch.build]
include = ["src/auditai/fonts/*.ttf"]

[tool.hatch.build.targets.sdist]
include = ["src/auditai", "README.md", "LICENSE", "examples", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
