[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auditai-cloud-api"
version = "0.1.0"
description = "AuditAI Cloud API stub — ingest & history for CI audit runs"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
auditai-cloud = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
include = ["app/fonts/*.ttf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
